force-app/main/default/objects/custom_create94__c/custom_create94__c.object-meta.xml
<CustomObject>
    <label>Custom created object94</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects94</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>