force-app/main/default/objects/custom_create94__c/fields/custom_create_94field586__c.field-meta.xml
<CustomField>
    <fullName>custom_create_94field586__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 94field586</label>
    <type>Checkbox</type>
</CustomField>